# sar-radar

./: .gitignore  README.md
docs/design/: rf_design_notes.md  sar_algorithm_theory.md  system_architecture.md
docs/references/: reference_list.md
firmware/esp32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/esp32/main/: CMakeLists.txt  main.c  wifi_stream.h
firmware/fpga/: constraints.xdc  top_module.v
firmware/fpga/data_capture/: lvds_capture.v
firmware/fpga/dsp/: range_fft.v
firmware/fpga/peripherals/: display_spi.v  imu_spi.v  sd_spi.v  spi_bridge.v
firmware/fpga/radar_ctrl/: awr2243_spi.v
hardware/bom/: bom_master.csv
hardware/mechanical/: enclosure_specs.md
hardware/pcb/: stackup.md
hardware/production/: manufacturing_notes.md
hardware/schematics/main-board/: README.md
hardware/schematics/rf-module/: README.md  awr2243-symbols.kicad_sym  rf-module-bom-jlcpcb.csv  rf-module-cpl-jlcpcb.csv  rf-module-design-guide.md  rf-module.kicad_dru  rf-module.kicad_pro  rf-module.kicad_sch
hardware/schematics/rf-module/awr2243-footprints.pretty/: AWR2243_BGA161.kicad_mod  Hirose_DF40_60pin.kicad_mod  PatchAntenna_77GHz_RX.kicad_mod  PatchAntenna_77GHz_TX.kicad_mod
software/: requirements.txt
software/gui/: __init__.py  main_window.py
software/sar_processor/: __init__.py  autofocus.py  bpa.py  data_loader.py  main.py  motion_comp.py  radar_config.py
software/sar_processor/cuda_kernels/: __init__.py  bpa_kernel.py
software/simulation/: antenna_pattern.py  link_budget.py  sar_simulation.py
